--- a/freertos_build/Cargo.toml
+++ b/freertos_build/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1"
+cc = "1"
+serde = {version = "1", features = ["derive"]}
+handlebars = "4"
+
+[dev-dependencies]
+regex = "1"
