--- a/freertos/Cargo.toml
+++ b/freertos/Cargo.toml
@@ -6,3 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chlorine = "1"
+
+[features]
+default = ["cm4"]
+
+dynamic_memory = []
+task_notifications = []
+mutex = []
+cm4 = []
+trace_facility = []
